$Id$                       -*-text-*-


Revision history for Net::DNS               
=============================
*** NOT RELEASED YET

Fix rt.cpan.org #11931 Wrong nameserver list handling in
                       Net::DNS::Resolver::Win32


    The init method has been rewritten to be based on WIN32::IPhelper for
    the selection of the domain and the IP addresses. This is believed to 
    be more portable than trying to fetch the data from the registry.
    We still trying to get the searchlist from the registry.

    WARNING: If you use Perl under WIN32 (eg ActivePerl or Strawberry Perl)
    then your module dependency graph has changed drastically

Fix IPv6 modules
    When IO::Socket::INET6 was available but Socket6 was not the code would
    recurse to infinity.

Fix rt.cpan.org #21757 and Feature: Connectivity during test
    Addition of --no-IPv6-tests and --IPv6-tests option in Makefile.PL.
    Note: This causes two questions to be asked when building the
    Makefile instead of one.

    Besides the test suites are constructed so that all the connectivity testing
    happen in 001-connectivity.t and inavailability of connectivity over a certain
    transport is signalled over files t/online.disabled and t/IPv6.disabled respectivly.
    Both files are removed by t/99-cleanup

Fix rt.cpan.org #34511
    Priming query logic contained unneeded recursion. 
    Now also fals back to hardcoded hints if there are no nameservers whatsoever.

Fix rt.cpan.org #38390 and 37089
    Added CD and AD bit control to the resolver.

    The CD flag defaults to being unset and the AD flags is set by default
    whenever DNSSEC is available. 
    Both flags default to unset in absence of DNSSEC.


Fix rt.cpan.org #37282
   Improved error reporting during client disconnect from the nameserver

NOTE rt.cpan.org # 40249

   Release 0.62 introduced a feature to parse data inside a packet only 
   when needed. This can the following to happen:
